sfdx/force-app/main/default/objects/Account/fields/Last_Signal_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Signal_Date__c</fullName>
    <label>Last Signal Date</label>
    <type>Date</type>
</CustomField>