sfdx/force-app/main/default/objects/Account/fields/Priority_Score__c.field-meta.xml
<CustomField>
    <fullName>Priority_Score__c</fullName>
    <label>Priority Score</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>